# march-madnia

./: .dart_defines.example  .dockerignore  .env.example  .gitignore  CLAUDE.md  Dockerfile  Dockerfile.flutter  Makefile  README.md  docker-compose.yml  main.py  pyproject.toml
.claude/agents/: analyst-agents-agent.md  backend-agent.md  claude-md-refiner.md  expert-picks-agent.md  feature-agent.md  flutter-bracket-agent.md  flutter-styling.md  prediction-agent.md  scraping-agent.md  skill-md-refiner.md  training-agent.md
.claude/rules/: security-scan-before-commit.md  self-documentation.md
api/: agents.py  auth.py  config.py  db.py  main.py  models.py
api/skills/database/: SKILL.md
api/skills/error-handling/: SKILL.md
api/skills/security/: SKILL.md
api/skills/sse/: SKILL.md
app/: README.md  pubspec.yaml
app/lib/: app.dart  main.dart
app/linux/: CMakeLists.txt
app/test/: widget_test.dart
app/web/: index.html  manifest.json
app/windows/: CMakeLists.txt
config/: seasons.yaml
config/brackets/: bracket_2025.json  bracket_2026.json  results_2025.json
config/features/: slim_8.txt
data/models/: feature_names.txt  feature_names_with2025.txt
data/predictions/: bracket_predictions.csv  bracket_predictions.json  expert_picks_manual.json
docs/: FEATURE_ANALYSIS.md
scripts/: compare_models_2025.py  predict.py  run_agents.py  scrape_2026_season.py  scrape_all.py  scrape_expert_picks.py  scrape_season.py  scrape_tournament_teams.py  seed_supabase.py  train.py  train_with2025.py  validate.py  validate_2025.py
scripts/_archive/: direct_model_comparison.py  predict_bracket.py  retrain_debiased.py  train_debiased.py  train_no2024.py  validate_2024_holdout.py  validate_2025_final.py  validate_2025_without_2024.py
src/: config.py  pipeline.py
src/agents/: __init__.py  basketball_analyst.py  expert_analysts.py  feature_agent.py  reviewer.py  runner.py  schemas.py  state.py  supervisor.py  utils.py
src/bracket/: simulator.py  visualizer.py
src/features/: matchup.py  momentum.py  player_features.py  portal_features.py  team_features.py  validation.py
src/models/: baseline.py  boosting.py  calibration.py  ensemble.py  evaluation.py
src/scraping/: expert_picks.py  sports_ref.py  torvik.py  transfer_portal.py  utils.py
supabase/: config.toml
supabase/migrations/: 20260318100100_extensions.sql  20260318100200_teams.sql  20260318100300_bracket_predictions.sql  20260318100400_expert_picks.sql  20260318100500_user_brackets.sql  20260318100600_bracket_ratings.sql  20260318100700_articles_and_embeddings.sql  20260318100800_chat_history.sql
supabase/seeds/: experts.sql  predictions.sql
(+52 files in other folders)
